--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>conflict</title>
+    <title>コンフリクト</title>
 </head>
 <body>
     <h1>git 2回目</h1>
     <h1 class="yes">イエスイエスイエス！！</h1>
+
+    <h2>元気があればなんでもできる</h2>
     
 </body>
 </html>
