--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>git 2回目</h1>
     <h1 class="yes">イエスイエスイエス！！</h1>
 
-    <h2>元気があればなんでもできる</h2>
+    <h2>金があれば何でもできる</h2>
     
 </body>
 </html>
